--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                 <a href="index.html"><img src="download.png" alt="logo"></a>
                 <h5>Developed by</h5>
                 <h2>Mohd Sahil</h2>
+                <h2>Suresh</h2>
             </div>
             <div class="section2">
                 <div>
